<resources>
    <string name="app_name">MobileCodingChallenge</string>
    <string name="title_my_rides">My Rides</string>
    <string name="title_ride_details">Ride Details</string>
    <string name="circular_divider_description">circular divider</string>
    <string name="start_time_end_time_divider">-</string>
    <string name="estimated">ESTIMATED</string>
    <string name="trip_card_start_time_end_time_divider">----</string>
    <string name="estLabel">est.</string>
    <string name="middle_dot">•</string>
    <string name="series_description">This trip is part of a series.</string>
    <string name="trip_details_format_string">Trip ID:%s • %.2f mi • %d min</string>
    <string name="waypoint_type_icon_description">waypoint type icon</string>
    <string name="cancel_this_trip_button_text">Cancel This Trip</string>
    <string name="pickup">Pickup</string>
    <string name="drop_off">Drop-off</string>
    <string name="unkownError">Unknown Error Occurred</string>
    <string name="cancel_claim_message">Are you sure you want to cancel this claim? This cannot be undone.</string>
    <string name="cancel_claim_title">Are you sure?</string>
    <string name="close_button_description">close</string>
    <string name="cancel_claim_nevermind">Nevermind</string>
    <string name="yes">Yes</string>
    <string name="claim_cancelled">Claim cancelled!</string>
    <plurals name="riders">
        <item quantity="one">%d rider</item>
        <item quantity="other">%d riders</item>
    </plurals>
    <plurals name="boosters">
        <item quantity="one">%d booster</item>
        <item quantity="other">%d boosters</item>
    </plurals>
</resources>