<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:elevation="8dp">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Thurs 6/17"
            style="@style/DayDateStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/dateTimeDivider"
            android:text="@string/middle_dot"
            android:textColor="@color/textGrey"
            android:contentDescription="@string/circular_divider_description"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/date"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="4:18a"
            style="@style/TripHeaderStartTimeStyle"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/dateTimeDivider" />

        <TextView
            android:id="@+id/startTimeEndTimeDivider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintStart_toEndOf="@id/startTime"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/start_time_end_time_divider" />

        <TextView
            android:id="@+id/endTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/startTimeEndTimeDivider"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="4dp"
            tools:text="4:26p"
            style="@style/TripHeaderEndTimeStyle" />

        <LinearLayout
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/estimatedLabel"
                android:text="@string/estimated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/EstimatedLabelStyle" />

            <TextView
                android:id="@+id/estimateAmount"
                tools:text="$105.25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/EstimatedAmountStyle" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>