<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/hsdBackgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="16dp"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:id="@+id/containerLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_gravity="end"
                android:id="@+id/close_button"
                android:contentDescription="@string/close_button_description"
                android:background="@drawable/icon_close"
                android:layout_width="16dp"
                android:layout_height="16dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:paddingEnd="32dp"
                android:paddingStart="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/title"
                    style="@style/DialogTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/black"
                    tools:text="@string/cancel_claim_title" />

                <TextView
                    android:id="@+id/message"
                    style="@style/DialogMessageStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:text="@string/cancel_claim_message" />

                <LinearLayout
                    android:id="@+id/buttonContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>